add a new entry ap2015 to the external defined entities, to the DM and AC registry

--- a/OMNA/dm/dm_ac_registry.html
+++ b/OMNA/dm/dm_ac_registry.html
@@ -307,6 +307,12 @@
                     <td class="TableP1big">urn:oma:ac:ap2014_gsma_phone_number_entitlement_configuration</td>
                     <td class="TableP1little">AC for the Phone Number Verification entitlement configuration</td>
                  </tr>
+                 <tr>
+                    <td class="TableP1big">ap2015</td>
+                    <td class="TableP1little">ac_ap2015_gsma_app_authentication_with_entitlement</td>
+                    <td class="TableP1big">urn:oma:ac:ap2015_gsma_app_authentication_with_entitlement</td>
+                    <td class="TableP1little">AC for the Application Authentication with Entitlement</td>
+                 </tr>
             </tbody>
         </table>
 
