--- a/OMNA/LwM2M/ObjectIDClasses.html
+++ b/OMNA/LwM2M/ObjectIDClasses.html
@@ -20,8 +20,12 @@
         0-499 DM&SE Working Group<br>
         500-1023 IPSO Working Group
       </td>
-      <td><a title="click here to view OMA defined Objects" href="#omalabel">View</a></td>
-      <td><a title="these objects are only registered by OMA Working Groups" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a></td>
+      <td>
+        <button id="filter_oma_objects" title="click here to view OMA defined Objects" class="btn btn-link">View</button>
+      </td>
+      <td>
+        <a title="these objects are only registered by OMA Working Groups" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
+      </td>
     </tr>
     <tr>
       <td>
@@ -61,7 +65,7 @@
         Objects registered by 3rd party standards organisations or alliances.
       </td>
       <td>
-        <a title="click here to view Objects registered by 3rd party SDOs" href="#extlabel">View</a>
+        <button id="filter_3rd_party_objects" title="click here to view Objects registered by 3rd party SDOs"  class="btn btn-link">View</button>
       </td>
       <td>
         <a title="click here to register an Object if you are from a Standard Organization" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
@@ -84,7 +88,7 @@
         Objects registered by companies or individuals.
       </td>
       <td>
-        <a title="click here to view Objects registered by companies and individuals" href="#x_label">View</a>
+        <button id="filter_company_objects" title="click here to view Objects registered by companies and individuals"class="btn btn-link">View</button>
       </td>
       <td>
         <a title="click here to register an Object if you are vendors or individuals" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
@@ -106,7 +110,7 @@
         published on the OMNA Lightweight Object Registry.
       </td>
       <td>
-        <a title="click here to view reserved Objects" href="#reservedlabel">View</a>
+        <button id="filter_reserved_objects" title="click here to view reserved Objects" class="btn btn-link">View</button
       </td>
       <td>
         <a title="click here to block reserve Objects" href="mailto:helpdesk@omaorg.org?Subject=Reserve%20Objects">Reserve</a>
