--- a/OMNA/LwM2M/ResourceIDClasses.html
+++ b/OMNA/LwM2M/ResourceIDClasses.html
@@ -38,7 +38,7 @@
         Private registrations are not allowed<br>
       </td>
       <td>
-        <a title="click here to view Resources registered in OMA" href="#resources"> View</a>
+        <button title="click here to view Resources registered in OMA" id="filter_resources" class="btn btn-link">View</button>
       </td>
       <td>
         <a title="click here to register a new Resource" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
