fix: lwm2m registry objectId table links

--- a/OMNA/LwM2M/LwM2MRegistry-old.html
+++ b/OMNA/LwM2M/LwM2MRegistry-old.html
@@ -229,7 +229,7 @@
             // }
 
     </script>
-    <script defer>
+    <script  type="module">
       // ObjectIDClasses onclick envent handlers 
       window.filterOmaObjectsOnClick = function filterOmaObjects(e) {
         e.preventDefault()
