--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -606,7 +606,7 @@
        }
       })
     </script>
-    <script defer>
+    <script  type="module">
       // ObjectIDClasses onclick envent handlers 
       window.filterOmaObjectsOnClick = function filterOmaObjects(e) {
         const objectTable = document.getElementById('objectid-table')
