--- a/OMNA/LwM2M/LwM2MRegistry-old.html
+++ b/OMNA/LwM2M/LwM2MRegistry-old.html
@@ -126,8 +126,47 @@
             $('#header').load("../../header.html");
             $('#footer').load("../../footer.html");
             $('#omna-info').load("OMNAInformation.html");
-            $('#objectid-classes').load("ObjectIDClasses.html");
-            $('#resourceid-classes').load("ResourceIDClasses.html");
+
+            // ObjectIDClasses onclick envent handlers 
+            window.filterOmaObjectsOnClick = function filterOmaObjects(e) {
+              e.preventDefault()
+              window.location.hash = "omalabel"
+            }
+
+            window.filter3rdPartyObjectsOnClick = function filter3rdPartyObjects(e) {
+              e.preventDefault()
+              window.location.hash = "#extlabel"
+            }
+
+            window.filterCompanyObjectsOnClick = function filterCompanyObjects(e) {
+              e.preventDefault()
+              window.location.hash = "#x_label"
+            }
+
+            window.filterReservedObjectsOnClick = function filterReservedObjects(e) {
+              e.preventDefault()
+              window.location.hash = "#reservedlabel"
+            }
+
+            window.filterResourcesOnClick = function filterResources(e) {
+              e.preventDefault()
+              window.location.hash = "#resources"
+            }
+
+            const el_oma = document.getElementById("filter_oma_objects")
+            el_oma.addEventListener('click', window.filterOmaObjectsOnClick)
+
+            const el_3rd = document.getElementById("filter_3rd_party_objects")
+            el_3rd.addEventListener('click', window.filter3rdPartyObjectsOnClick)
+
+            const el_company = document.getElementById("filter_company_objects")
+            el_company.addEventListener('click', window.filterCompanyObjectsOnClick)
+
+            const el_reserved = document.getElementById("filter_reserved_objects")
+            el_reserved.addEventListener('click', window.filterReservedObjectsOnClick)
+
+            const el_resources = document.getElementById("filter_resources")
+            el_resources.addEventListener('click', window.filterResourcesOnClick)
 
             const {githubAuth} = window.localStorage;
 
@@ -229,50 +268,6 @@
             // }
 
     </script>
-    <script  type="module">
-      // ObjectIDClasses onclick envent handlers 
-      window.filterOmaObjectsOnClick = function filterOmaObjects(e) {
-        e.preventDefault()
-        window.location.hash = "omalabel"
-      }
-
-      window.filter3rdPartyObjectsOnClick = function filter3rdPartyObjects(e) {
-        e.preventDefault()
-        window.location.hash = "#extlabel"
-      }
-
-      window.filterCompanyObjectsOnClick = function filterCompanyObjects(e) {
-        e.preventDefault()
-        window.location.hash = "#x_label"
-      }
-
-      window.filterReservedObjectsOnClick = function filterReservedObjects(e) {
-        e.preventDefault()
-        window.location.hash = "#reservedlabel"
-      }
-
-      window.filterResourcesOnClick = function filterResources(e) {
-        e.preventDefault()
-        window.location.hash = "#resources"
-      }
-
-      $(window).on('load', function windowLoad() {
-        const el_oma = document.getElementById("filter_oma_objects")
-        el_oma.addEventListener('click', window.filterOmaObjectsOnClick)
-
-        const el_3rd = document.getElementById("filter_3rd_party_objects")
-        el_3rd.addEventListener('click', window.filter3rdPartyObjectsOnClick)
-
-        const el_company = document.getElementById("filter_company_objects")
-        el_company.addEventListener('click', window.filterCompanyObjectsOnClick)
-
-        const el_reserved = document.getElementById("filter_reserved_objects")
-        el_reserved.addEventListener('click', window.filterReservedObjectsOnClick)
-
-        const el_resources = document.getElementById("filter_resources")
-        el_resources.addEventListener('click', window.filterResourcesOnClick)
-      })
-    </script>
     <script src="../../Scripts/googleanalytics.js"></script>
 </head>
 <body>
@@ -322,11 +317,235 @@
           <h2>
             ObjectID Classes
           </h2>
-          <div id="objectid-classes"></div>
+          <div id="objectid-classes">
+            <table id="registry-table" class="table-bordered">
+              <thead>
+                <tr>  
+                  <th>Category</th>
+                  <th>Label</th>
+                  <th>URN </th>
+                  <th>Object ID range</th>
+                  <th>Description</th>
+                  <th colspan="2">Operations</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><p>OMA</p></td>
+                  <td><p>oma</p></td>
+                  <td><p><code>urn:oma:lwm2m:oma:&lt;id&gt;:&lt;version&gt;</code></p></td>
+                  <td>0 - 1023</td>
+                  <td>
+                    Objects Produced by OMA. Only OMA can use this range.<br>
+                    0-499 DM&SE Working Group<br>
+                    500-1023 IPSO Working Group
+                  </td>
+                  <td>
+                    <button id="filter_oma_objects" title="click here to view OMA defined Objects" class="btn btn-link">View</button>
+                  </td>
+                  <td>
+                    <a title="these objects are only registered by OMA Working Groups" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>Reserved</p>
+                  </td>
+                  <td>
+                    <p>reserved</p>
+                  </td>
+                  <td>n/a</td>
+                  <td>
+                    1024 - 2047
+                  </td>
+                  <td>
+                    Reserved for future use
+                  </td>
+                  <td>
+                    --
+                  </td>
+                  <td>
+                    --
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>SDO</p>
+                  </td>
+                  <td>
+                    <p>ext</p>
+                  </td>
+                  <td>
+                    <p><code>urn:oma:lwm2m:ext:&lt;id&gt;:&lt;version&gt;</code></p>
+                  </td>
+                  <td>
+                    2048 - 10240
+                  </td>
+                  <td>
+                    Objects registered by 3rd party standards organisations or alliances.
+                  </td>
+                  <td>
+                    <button id="filter_3rd_party_objects" title="click here to view Objects registered by 3rd party SDOs"  class="btn btn-link">View</button>
+                  </td>
+                  <td>
+                    <a title="click here to register an Object if you are from a Standard Organization" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>Vendors</p>
+                  </td>
+                  <td>
+                    <p>x</p>
+                  </td>
+                  <td>
+                    <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code></p>
+                  </td>
+                  <td>
+                    10241 - 32768
+                  </td>
+                  <td>
+                    Objects registered by companies or individuals.
+                  </td>
+                  <td>
+                    <button id="filter_company_objects" title="click here to view Objects registered by companies and individuals"class="btn btn-link">View</button>
+                  </td>
+                  <td>
+                    <a title="click here to register an Object if you are vendors or individuals" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Company Reserved</td>
+                  <td>
+                    <p>x</p>
+                  </td>
+                  <td>
+                    <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code></p>
+                  </td>
+                  <td>
+                    32769 - 42768
+                  </td>
+                  <td>
+                    Company bulk reservations of up to 50 Object IDs. This range is to create private LwM2M Objects that are not
+                    published on the OMNA Lightweight Object Registry.
+                  </td>
+                  <td>
+                    <button id="filter_reserved_objects" title="click here to view reserved Objects" class="btn btn-link">View</button
+                  </td>
+                  <td>
+                    <a title="click here to block reserve Objects" href="mailto:helpdesk@omaorg.org?Subject=Reserve%20Objects">Reserve</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Test</td>
+                  <td>
+                    <p>n/a</p>
+                  </td>
+                  <td>
+                    <p>n/a</p>
+                  </td>
+                  <td>
+                    42769 - 42800
+                  </td>
+                  <td>
+                    Object IDs for testing purpose. These IDs MUST NOT be used in production as collisions with other Object IDs are possible.
+                  </td>
+                  <td>--</td>
+                  <td>--</td>
+                </tr>
+                <tr>
+                  <td>Reserved</td>
+                  <td>
+                    <p>n/a</p>
+                  </td>
+                  <td>
+                    <p>n/a</p>
+                  </td>
+                  <td>
+                    42801 - 65534
+                  </td>
+                  <td>
+                    Reserved for future use.
+                  </td>
+                  <td>--</td>
+                  <td>--</td>
+                </tr>
+              </tbody>
+              <caption>
+                Note: Final allocation of objectIDs will be done by OMNA Staff.
+              </caption>
+            </table>
+          </div>
         </div>
         <div>
           <h2>ResourceID Classes</h2>
-          <div id="resourceid-classes"></div>
+          <div id="resourceid-classes">
+            <table>
+              <thead>
+                <tr>
+                  <th>Category</th>
+                  <th>Resource ID Range</th>
+                  <th>Description</th>
+                  <th colspan="2">Operations</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <p>Common Resources</p>
+                  </td>
+                  <td>
+                    0 - 2047
+                  </td>
+                  <td>
+                    Common resource defined inside  Objects. Inside of an Object the resourceIDs must be unique but it can be reused in different Objects.
+                  </td>
+                  <td>
+                    --
+                  </td>
+                  <td>
+                    --
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>Reusable Resources</p>
+                  </td>
+                  <td>
+                    2048 - 26240
+            
+                  </td>
+                  <td>
+                    Resources registered by companies, standards organisations or alliances. Note: ResourceID is finally allocated by OMNA Staff.
+                    Private registrations are not allowed<br>
+                  </td>
+                  <td>
+                    <button title="click here to view Resources registered in OMA" id="filter_resources" class="btn btn-link">View</button>
+                  </td>
+                  <td>
+                    <a title="click here to register a new Resource" href="http://devtoolkit.openmobilealliance.org/OEditor/Default">Register</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>Private Resources</p>
+                  </td>
+                  <td>
+                    26241 - 32768
+                  </td>
+                  <td>
+                    Private resource range, no registration is necessary and open to re-use.
+                  </td>
+                  <td>
+                    --
+                  </td>
+                  <td>
+                    --
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <!-- This table gets filled in from the DDF.xml file -->
         <div>
