a new appID for TS.43 specs

--- a/OMNA/dm/dm_ac_registry.html
+++ b/OMNA/dm/dm_ac_registry.html
@@ -313,6 +313,12 @@
                     <td class="TableP1big">urn:oma:ac:ap2015_gsma_app_authentication_with_entitlement</td>
                     <td class="TableP1little">AC for the Application Authentication with Entitlement</td>
                  </tr>
+                 <tr>
+                    <td class="TableP1big">ap2016</td>
+                    <td class="TableP1little">ac_ap2016_gsma_satmode_entitlement</td>
+                    <td class="TableP1big">urn:oma:ac:ap2016_gsma_satmode_entitlement</td>
+                    <td class="TableP1little">AC for the Satellite Mode Entitlement Configuration</td>
+                 </tr>
             </tbody>
         </table>
 
