urn segment added to Object test range

--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -237,7 +237,7 @@
                   published on the OMNA Lightweight Object Registry.
                 </td>
                 <td>
-                  <button id="filter_reserved_objects" title="click here to view reserved Objects" class="btn btn-link">View</button
+                  <button id="filter_reserved_objects" title="click here to view reserved Objects" class="btn btn-link">View</button>
                 </td>
                 <td>
                   <a title="click here to block reserve Objects" href="mailto:helpdesk@omaorg.org?Subject=Reserve%20Objects">Reserve</a>
@@ -246,10 +246,10 @@
               <tr>
                 <td>Test</td>
                 <td>
-                  <p>n/a</p>
+                  <p>x</p>
                 </td>
                 <td>
-                  <p>n/a</p>
+                  <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code</p>
                 </td>
                 <td>
                   42769 - 42800
