--- a/public_documents.html
+++ b/public_documents.html
@@ -95,10 +95,13 @@
                                 <a href="https://www.omaspecworks.org/whitepaper-12-5-2018/">OMA Lightweight M2M 5G, IoT, UN-SDG</a>
                             </li>
                             <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA Lightweight M2M - Ready For 5G, OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA Lightweight M2M - Ready For 5G</a>
                             </li>
                             <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-ENISA-LwM2M-20210511-A">OMA LwM2M in ENISA's Secure Supply Chain for IoT, OMA-WP-ENISA-LwM2M-20210511-A</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-WP-State-of-the-LwM2M-Standard-20200114-C</a>
+                            </li>
+                            <li>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-ENISA-LwM2M-20210511-A/OMA-WP-ENISA-LwM2M-20210511-A.pdf">OMA-WP-ENISA-LwM2M-20210511-A.pdf</a>
                             </li>
                             <li>
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-ORG-Guidelines_Creation_Registration_LwM2M_Objects_Resources-V1_0_1-20190115-A.pdf">OMA-ORG-Guidelines_Creation_Registration_LwM2M_Objects_Resources-V1_0_1-20190115-A.pdf</a>
