update whitepapers links

--- a/public_documents.html
+++ b/public_documents.html
@@ -89,13 +89,10 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="https://www.omaspecworks.org/managing_non-ip_devices_in_cellular_iot_networks/">OMA Lightweight M2M 1.1:Managing Non-IP Devices in Cellular IoT Networks</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-Managing%20Non-IP%20Devices%20in%20Cellular%20IoT%20Networks.pdf">OMA-LwM2M_1.1_:Managing-Non-IP-Devices-in-Cellular-IoT-Networks.pdf</a>
                             </li>
                             <li>
-                                <a href="https://www.omaspecworks.org/whitepaper-12-5-2018/">OMA Lightweight M2M 5G, IoT, UN-SDG</a>
-                            </li>
-                            <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA Lightweight M2M - Ready For 5G</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-5G,%20IoT,%20UN-SDG.pdf">OMA-LwM2M-5G_IoT_UN-SDG-20180512.pdf</a>
                             </li>
                             <li>
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-WP-State-of-the-LwM2M-Standard-20200114-C</a>
