update file names

--- a/public_documents.html
+++ b/public_documents.html
@@ -95,7 +95,7 @@
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-5G,%20IoT,%20UN-SDG.pdf">OMA-LwM2M-5G_IoT_UN-SDG-20180512.pdf</a>
                             </li>
                             <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-WP-State-of-the-LwM2M-Standard-20200114-C</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-LwM2M-Ready-For-5G:OMA-WP-State-of-the-LwM2M-Standard-20200114-C</a>
                             </li>
                             <li>
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-ENISA-LwM2M-20210511-A/OMA-WP-ENISA-LwM2M-20210511-A.pdf">OMA-WP-ENISA-LwM2M-20210511-A.pdf</a>
