--- a/public_documents.html
+++ b/public_documents.html
@@ -89,13 +89,13 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-Managing%20Non-IP%20Devices%20in%20Cellular%20IoT%20Networks.pdf">OMA-LwM2M_1.1_:Managing-Non-IP-Devices-in-Cellular-IoT-Networks.pdf</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-Managing%20Non-IP%20Devices%20in%20Cellular%20IoT%20Networks.pdf">OMA-LwM2M_1.1:Managing-Non-IP-Devices-in-Cellular-IoT-Networks.pdf</a>
                             </li>
                             <li>
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/LwM2M-5G,%20IoT,%20UN-SDG.pdf">OMA-LwM2M-5G_IoT_UN-SDG-20180512.pdf</a>
                             </li>
                             <li>
-                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-LwM2M-Ready-For-5G:OMA-WP-State-of-the-LwM2M-Standard-20200114-C</a>
+                                <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf">OMA-LwM2M-Ready-For-5G:OMA-WP-State-of-the-LwM2M-Standard-20200114-C.pdf</a>
                             </li>
                             <li>
                                 <a href="https://www.openmobilealliance.org/documents/whitepapers/OMA-WP-ENISA-LwM2M-20210511-A/OMA-WP-ENISA-LwM2M-20210511-A.pdf">OMA-WP-ENISA-LwM2M-20210511-A.pdf</a>
